[package]
name = "sabre-cli"
version = "0.8.1"
authors = ["Cargill Incorporated"]
edition = "2018"

[[bin]]
name = "sabre"
path = "src/main.rs"

[dependencies]
base64 = "0.13"
clap = "2"
cylinder = "0.2"
dirs = "2"
futures = "0.1"
hyper = "0.11"
protobuf = "2.19"
rust-crypto = "0.2"
tokio-core = "0.1"
users = "0.6"
yaml-rust = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sabre-sdk = {path = "../sdks/rust"}
transact = "0.3"

[build-dependencies]
protoc-rust = "2"

[features]
default = []

stable = [
    # The stable feature extends default:
    "default",
    # The following features are stable:
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
]
