# Copyright 2018-2022 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]

members = [
    "cli",
    "libsplinter",
    "splinterd",
    "rest_api/actix_web_1",
    "rest_api/actix_web_4",
    "rest_api/common",
    "examples/gameroom/cli",
    "examples/gameroom/database",
    "examples/gameroom/daemon",
    "services/scabbard/cli",
    "services/scabbard/libscabbard",
]

[patch.crates-io]
transact = { git = "https://github.com/hyperledger/transact" }
sabre-sdk = { git = "https://github.com/hyperledger/sawtooth-sabre" }
sawtooth = { git = "https://github.com/hyperledger/sawtooth-lib" }
