# Copyright 2018-2020 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "splinter-cli"
version = "0.5.1"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Splinter is a privacy-focused platform for distributed applications that \
    provides a blockchain-inspired networking environment for communication \
    and transactions between organizations.
"""

[[bin]]
name = "splinter"
path = "src/main.rs"

[dependencies]
clap = "2"
diesel = { version = "1.0", features = ["postgres"], optional = true }
dirs = "2.0"
flexi_logger = "0.14"
libc = "0.2"
log = "0.4"
oauth2 = { version = "3.0", default-features = false, optional = true }
openssl = "0.10"
protobuf = "2"
reqwest = { version = "0.10", features = ["blocking", "json"] }
sawtooth-sdk = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
splinter = { path = "../libsplinter", features = ["registry", "sawtooth-signing-compat"] }
tiny_http = { version = "0.7", optional = true }
webbrowser = { version = "0.5", optional = true }
whoami = "0.7.0"

[dev-dependencies]
gag = "0.1"
serial_test = "0.3"

[features]
default = [
    "database",
    "database-migrate-biome",
]

stable = [
    "default"
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "circuit-template",
    "health",
    "login",
    "login-oauth2",
    "postgres",
    "circuit-auth-type",
]

circuit-auth-type = []
circuit-template = ["splinter/circuit-template"]
database-migrate-biome = ["splinter/biome"]

health = []

database = ["splinter/postgres", "diesel", "postgres"]
login = []
login-oauth2 = ["login", "oauth2", "tiny_http", "webbrowser"]

postgres = [
    "diesel/postgres",
    "splinter/postgres",
]

[package.metadata.deb]
maintainer = "The Splinter Team"
depends = "$auto"
maintainer-scripts = "packaging/ubuntu"
assets = [
    ["packaging/man/*.1", "/usr/share/man/man1", "644"],
    ["target/release/splinter", "/usr/bin/splinter", "755"],
    ["packaging/scabbard_circuit_template.yaml", "/usr/share/splinter/circuit-templates/scabbard.yaml", "644"]
]
