# Copyright 2018-2022 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "splinter-cli"
version = "0.7.1"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Splinter is a privacy-focused platform for distributed applications that \
    provides a blockchain-inspired networking environment for communication \
    and transactions between organizations.
"""

[[bin]]
name = "splinter"
path = "src/main.rs"

[dependencies]
clap = "2"
cylinder = { version = "0.2.2", features = ["jwt", "key-load"] }
diesel = { version = "1.0", features = ["postgres"], optional = true }
dirs = "4"
flexi_logger = { version = "0.21", features = ["use_chrono_for_offset"] }
libc = "0.2"
log = "0.4"
openssl = "0.10"
protobuf = "2.23"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
whoami = "0.7.0"
users = "0.11"
transact = { version = "0.5", features = ["state-merkle-sql"] }

[dependencies.sawtooth]
version = "0.8"
default-features = false
features = ["lmdb", "transaction-receipt-store"]

[dependencies.splinter]
path = "../libsplinter"
features = ["admin-service", "registry", "node-id-store"]

[dependencies.scabbard]
path = "../services/scabbard/libscabbard"
default-features = false
optional = true

[dependencies.splinter-echo]
path = "../services/echo/libecho"
features = ["experimental"]
optional = true

[dev-dependencies]
gag = "1"
serial_test = "0.5"
tempfile = "3"

[features]
default = [
    "authorization-handler-rbac",
    "command",
    "circuit-template",
    "database",
    "postgres",
    "sqlite",
    "upgrade",
    "user",
]

stable = [
    "default",
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "authorization-handler-maintenance",
    "echo",
    "https-certs",
    "playlist-smallbank",
    "registry",
]

authorization-handler-maintenance = []
authorization-handler-rbac = []
circuit-template = ["splinter/circuit-template"]
command = ["transact/family-command-workload"]
database = ["diesel"]
echo = ["splinter-echo"]
https-certs = []
playlist-smallbank = ["transact/family-smallbank-workload", "transact/workload-batch-gen"]
postgres = [
    "diesel/postgres",
    "splinter/postgres",
    "scabbard/postgres"
]
registry = []
sqlite = [
    "diesel/sqlite",
    "splinter/sqlite",
    "scabbard/sqlite"
]
upgrade = [
    "database",
    "scabbard/lmdb",
    "splinter/store-factory"
]
user = []



[package.metadata.deb]
maintainer = "The Splinter Team"
depends = "$auto, bash-completion"
maintainer-scripts = "packaging/ubuntu"
assets = [
    ["packaging/man/*.1", "/usr/share/man/man1", "644"],
    ["target/release/splinter", "/usr/bin/splinter", "755"],
    ["packaging/ubuntu/completions/splinter", "/usr/share/bash-completion/completions/splinter", "644"],
    ["packaging/scabbard_circuit_template.yaml", "/usr/share/splinter/circuit-templates/scabbard.yaml", "644"]
]
