# Copyright 2018-2020 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "splinter"
version = "0.5.1"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
readme = "../README.md"
description = """\
    Splinter is a privacy-focused platform for distributed applications that \
    provides a blockchain-inspired networking environment for communication \
    and transactions between organizations.
"""
repository = "https://github.com/cargill/splinter"

[dependencies]
actix = { version = "0.8", optional = true, default-features = false }
actix-http = { version = "0.2", optional = true, features = ["flate2-zlib"] }
actix-web = { version = "1.0", optional = true, default-features = false, features = ["flate2-zlib"] }
actix-web-actors = { version = "1.0", optional = true }
atomicwrites = "0.2"
awc = { version = "0.2", optional = true }
bcrypt = {version = "0.6", optional = true}
byteorder = "1"
crossbeam-channel = "0.3"
diesel = { version = "1.0", features = ["r2d2", "serde_json"], optional = true }
diesel_migrations = { version = "1.4", optional = true }
futures = { version = "0.1", optional = true }
glob = { version = "0.3", optional = true }
hyper = { version = "0.12", optional = true }
jsonwebtoken = { version = "6.0", optional = true }
log = "0.3.0"
mio = "0.6"
mio-extras = "2"
oauth2 = { version = "3.0", optional = true }
openssl = "0.10"
percent-encoding = { version = "2.0", optional = true }
protobuf = "2"
rand = "0.7"
reqwest = { version = "0.10", optional = true, features = ["blocking", "json"] }
sawtooth-sdk = { version = "0.4", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "0.1.22", optional = true }
tungstenite = { version = "0.10", optional = true }
url = "1.7.1"
ursa = { version = "0.1", optional = true }
uuid = { version = "0.7", features = ["v4"]}
zmq = { version = "0.9", optional = true }

[dev-dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serial_test = "0.3"
tempdir = "0.3"

[build-dependencies]
protoc-rust = "2.14"
glob = "0.2"

[features]
default = []

stable = [
    "biome",
    "biome-credentials",
    "biome-key-management",
    "circuit-template",
    "default",
    "events",
    "postgres",
    "registry",
    "registry-remote",
    "rest-api",
    "rest-api-actix",
    "rest-api-cors",
    "sawtooth-signing-compat",
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "admin-service-store",
    "auth",
    "biome-notifications",
    "biome-user",
    "oauth",
    "oauth-github",
    "registry-database",
    "routing-table",
    "service-arg-validation",
    "service-network",
    "sqlite",
    "store-factory",
    "ws-transport",
    "zmq-transport",
]

# used for turning benchmark tests on
benchmark = []

auth = []
admin-service-store = []
biome = []
biome-credentials = ["biome", "biome-user", "bcrypt"]
biome-key-management = ["biome"]
biome-notifications = ["biome"]
biome-user = ["biome"]
circuit-template = ["glob"]
events = ["actix-http", "futures", "hyper", "tokio", "awc"]
oauth = ["auth", "oauth2"]
oauth-github = ["oauth"]
postgres = ["diesel/postgres", "diesel_migrations"]
registry = []
registry-database = ["diesel"]
registry-remote = ["reqwest", "registry"]
rest-api = [
    "actix",
    "actix-http",
    "actix-web",
    "actix-web-actors",
    "futures",
    "jsonwebtoken",
    "percent-encoding",
]
rest-api-actix = ["actix", "actix-http", "actix-web", "actix-web-actors"]
rest-api-cors = []
routing-table = []
sawtooth-signing-compat = ["sawtooth-sdk"]
service-arg-validation = []
service-network = []
sqlite = ["diesel/sqlite", "diesel_migrations"]
store-factory = []
ws-transport = ["tungstenite"]
zmq-transport = ["zmq"]

# The following features are broken and should not be used.

# The `ursa` dependency is currently broken, and will need to be fixed before
# the `ursa-compat` feature can be added back to `experimental`.
ursa-compat = ["ursa"]

[package.metadata.docs.rs]
features = [
    "stable",
    "experimental"
  ]
