# Copyright 2018-2021 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "splinter"
version = "0.5.1"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
readme = "../README.md"
description = """\
    Splinter is a privacy-focused platform for distributed applications that \
    provides a blockchain-inspired networking environment for communication \
    and transactions between organizations.
"""
repository = "https://github.com/cargill/splinter"

[dependencies]
actix = { version = "0.8", optional = true, default-features = false }
actix-http = { version = "0.2", optional = true, features = ["flate2-zlib"] }
actix-web = { version = "1.0", optional = true, default-features = false, features = ["flate2-zlib"] }
actix-web-actors = { version = "1.0", optional = true }
atomicwrites = "0.2"
awc = { version = "0.2", optional = true }
bcrypt = {version = "0.6", optional = true}
byteorder = "1"
crossbeam-channel = "0.3"
cylinder = "0.2.1"
diesel = { version = "1.0", features = ["r2d2", "serde_json"], optional = true }
diesel_migrations = { version = "1.4", optional = true }
futures = { version = "0.1", optional = true }
glob = { version = "0.3", optional = true }
hyper = { version = "0.12", optional = true }
jsonwebtoken = { version = "6.0", optional = true }
log = "0.3.0"
mio = "0.6"
mio-extras = "2"
oauth2 = { version = "3.0", optional = true }
openssl = "0.10"
percent-encoding = { version = "2.0", optional = true }
protobuf = "2.19"
rand = "0.7"
reqwest = { version = "0.10", optional = true, features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "0.1.22", optional = true }
tungstenite = { version = "0.10", optional = true }
url = "1.7.1"
uuid = { version = "0.8", features = ["v4", "v5"] }
zmq = { version = "0.9", optional = true }

[dev-dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serial_test = "0.3"
tempdir = "0.3"

[build-dependencies]
protoc-rust = "2.14"
glob = "0.2"

[features]
default = []

stable = [
    "admin-service",
    "biome",
    "biome-credentials",
    "biome-key-management",
    "circuit-template",
    "cylinder-jwt",
    "default",
    "events",
    "memory",
    "oauth",
    "postgres",
    "registry",
    "registry-remote",
    "rest-api",
    "rest-api-actix",
    "rest-api-cors",
    "sqlite",
    "store-factory",
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "admin-service-client",
    "admin-service-event-store",
    "admin-service-event-store-postgres",
    "authorization",
    "authorization-handler-allow-keys",
    "authorization-handler-maintenance",
    "authorization-handler-rbac",
    "biome-notifications",
    "biome-oauth-user-store-postgres",
    "biome-profile",
    "circuit-disband",
    "circuit-purge",
    "client-reqwest",
    "https-bind",
    "oauth-inflight-request-store-postgres",
    "registry-database",
    "role-based-authorization-store-postgres",
    "service-arg-validation",
    "service-network",
    "shutdown",
    "ws-transport",
    "zmq-transport",
]

# used for turning benchmark tests on
benchmark = []

admin-service = []
admin-service-client = []
admin-service-event-store = ["admin-service"]
admin-service-event-store-postgres = ["postgres", "admin-service-event-store"]
authorization-handler-allow-keys = ["authorization"]
authorization-handler-maintenance = ["authorization"]
authorization = ["rest-api"]
authorization-handler-rbac = ["authorization"]
biome = []
biome-credentials = ["bcrypt", "biome"]
biome-key-management = ["biome"]
biome-notifications = ["biome"]
biome-oauth-user-store-postgres = ["oauth", "postgres"]
biome-profile = ["biome"]
circuit-disband = []
circuit-purge = ["circuit-disband"]
circuit-template = ["admin-service", "glob"]
client-reqwest = ["reqwest"]
cylinder-jwt = ["cylinder/jwt", "rest-api"]
events = ["actix-http", "futures", "hyper", "tokio", "awc"]
https-bind = ["actix-web/ssl"]
memory = ["sqlite"]
oauth = ["biome", "oauth2", "reqwest", "rest-api"]
oauth-inflight-request-store-postgres = ["oauth", "postgres"]
postgres = ["diesel/postgres", "diesel_migrations"]
registry = []
registry-database = ["diesel"]
registry-remote = ["reqwest", "registry"]
rest-api = [
    "actix",
    "actix-http",
    "actix-web",
    "actix-web-actors",
    "futures",
    "jsonwebtoken",
    "percent-encoding",
]
rest-api-actix = ["actix", "actix-http", "actix-web", "actix-web-actors"]
rest-api-cors = []
role-based-authorization-store-postgres = ["authorization", "postgres"]
service-arg-validation = []
service-network = []
shutdown = []
sqlite = ["diesel/sqlite", "diesel_migrations"]
store-factory = []
ws-transport = ["tungstenite"]
zmq-transport = ["zmq"]

[package.metadata.docs.rs]
features = [
    "stable",
    "experimental"
  ]
