# Copyright 2018-2021 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "splinter-daemon"
version = "0.5.3"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Splinter is a privacy-focused platform for distributed applications that \
    provides a blockchain-inspired networking environment for communication \
    and transactions between organizations.
"""

[[bin]]
name = "splinterd"
path = "src/main.rs"

[lib]
name = "splinterd"
path = "src/lib.rs"

[dependencies]
bytes = "0.4"
clap = "2.32"
crossbeam-channel = "0.3"
ctrlc = "3.0"
cylinder = "0.2"
flexi_logger = "0.14"
health = { path = "../services/health", optional = true }
log = "0.4"
openssl = { version = "0.10", optional = true }
protobuf = "2.19"
rand = "0.7"
serde = "1.0.80"
serde_derive = "1.0.80"
tempdir = "0.3"
toml = "0.5"

[dev-dependencies]
openssl = { version = "0.10" }
sabre-sdk = "0.7"
transact = { version = "0.3" }

[dependencies.scabbard]
path = "../services/scabbard/libscabbard"
features = [
  "rest-api",
  "rest-api-actix",
]

[dependencies.splinter]
path = "../libsplinter"
features = [
  "admin-service",
  "cylinder-jwt",
  "memory",
  "registry",
  "registry-remote",
  "rest-api",
  "rest-api-actix",
  "store-factory",
]

[features]
default = [
    "biome-credentials",
    "biome-key-management",
    "database-postgres",
    "database-sqlite",
    "oauth",
]

stable = [
    "authorization",
    "authorization-handler-allow-keys",
    "default",
    "rest-api-cors",
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "authorization-handler-maintenance",
    "authorization-handler-rbac",
    "biome-profile",
    "health-service",
    "https-bind",
    "metrics",
    "node",
    "proposal-removal",
    "scabbard-back-pressure",
    "service-arg-validation",
    "service-endpoint",
    "ws-transport",
]

authorization = [
    "health/authorization",
    "scabbard/authorization",
    "splinter/authorization",
]
authorization-handler-allow-keys = ["splinter/authorization-handler-allow-keys"]
authorization-handler-maintenance = [
    "splinter/authorization-handler-maintenance",
]
authorization-handler-rbac = [
    "splinter/authorization-handler-rbac",
]
biome-credentials = ["splinter/biome-credentials"]
biome-key-management = ["splinter/biome-key-management"]
biome-profile = ["splinter/biome-profile", "splinter/oauth-profile"]
database-postgres = ["splinter/postgres"]
database-sqlite = ["splinter/sqlite"]
health-service = ["health"]
https-bind = ["splinter/https-bind"]
metrics = [
  "splinter/admin-service-count",
  "splinter/metrics",
  "scabbard/metrics",
]
node = [
    "authorization",
    "https-bind",
    "scabbard/client-reqwest",
    "scabbard/factory-builder",
    "splinter/admin-service-client",
    "splinter/admin-service-event-client",
    "splinter/admin-service-event-client-actix-web-client",
    "splinter/client-reqwest",
    "splinter/rest-api-actix-web-3",
    "splinter/registry-client",
    "splinter/registry-client-reqwest",
    "splinter/biome-client",
    "splinter/biome-client-reqwest",
]
oauth = [
    "splinter/oauth"
]
proposal-removal = ["splinter/proposal-removal"]
rest-api-cors = ["splinter/rest-api-cors"]
scabbard-back-pressure = ["scabbard/back-pressure"]
service-arg-validation = [
    "scabbard/service-arg-validation",
    "splinter/service-arg-validation",
]
service-endpoint = []
ws-transport = ["splinter/ws-transport"]

[package.metadata.deb]
maintainer = "The Splinter Team"
depends = "$auto"
assets = [
    ["packaging/man/*.1", "/usr/share/man/man1", "644"],
    ["packaging/registry.yaml.example", "/etc/splinter/registry.yaml.example", "644"],
    ["packaging/splinterd.toml.example", "/etc/splinter/splinterd.toml.example", "644"],
    ["packaging/systemd/splinterd", "/etc/default/splinterd", "644"],
    ["packaging/systemd/splinterd.service", "/lib/systemd/system/splinterd.service", "644"],
    ["target/release/splinterd", "/usr/bin/splinterd", "755"]
]
conf-files = [
    "/etc/default/splinterd",
    "/lib/systemd/system/splinterd.service"
]
maintainer-scripts = "packaging/ubuntu"
extended-description = """\
Splinter is a blockchain-inspired networking platform for distributed \
communications between organizations."""
