# Copyright 2018-2021 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "splinter-daemon"
version = "0.7.1"
authors = ["Cargill Incorporated"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Splinter is a privacy-focused platform for distributed applications that \
    provides a blockchain-inspired networking environment for communication \
    and transactions between organizations.
"""

[[bin]]
name = "splinterd"
path = "src/main.rs"

[lib]
name = "splinterd"
path = "src/lib.rs"

[dependencies]
bytes = "0.4"
clap = "2.32"
crossbeam-channel = "0.3"
ctrlc = "3.0"
cylinder = { version = "0.2.2", features = ["key-load"] }
diesel = { version = "1.0", features = ["postgres"], optional = true }
health = { path = "../services/health", optional = true }
log = "0.4"
log4rs = { version = "1", features = ["threshold_filter"] }
openssl = { version = "0.10", optional = true }
protobuf = "2.23"
rand = "0.7"
sawtooth = { version = "0.7", default-features = false, optional = true }
serde = "1.0.80"
serde_derive = "1.0.80"
tempdir = "0.3"
toml = "0.5"

[dev-dependencies]
openssl = { version = "0.10" }
reqwest = { version = "0.11", features = ["blocking"] }
sabre-sdk = "0.8"
transact = "0.4"

[dependencies.scabbard]
path = "../services/scabbard/libscabbard"
features = [
  "lmdb",
  "rest-api",
  "rest-api-actix",
  "splinter-service",
]

[dependencies.splinter]
path = "../libsplinter"
features = [
  "admin-service",
  "challenge-authorization",
  "cylinder-jwt",
  "memory",
  "registry",
  "registry-remote",
  "rest-api",
  "rest-api-actix",
  "store-factory",
  "node-id-store",
]

[features]
default = [
    "authorization",
    "authorization-handler-allow-keys",
    "authorization-handler-rbac",
    "biome-credentials",
    "biome-key-management",
    "biome-profile",
    "database-postgres",
    "database-sqlite",
    "oauth",
    "tap",
    "trust-authorization",
]

stable = [
    "default",
    "rest-api-cors",
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
    "authorization-handler-maintenance",
    "health-service",
    "https-bind",
    "node",
    "service-endpoint",
    "ws-transport",
]

authorization = [
    "scabbard/authorization",
    "splinter/authorization",
]
authorization-handler-allow-keys = ["splinter/authorization-handler-allow-keys"]
authorization-handler-maintenance = [
    "splinter/authorization-handler-maintenance",
]
authorization-handler-rbac = [
    "splinter/authorization-handler-rbac",
]
biome-credentials = ["splinter/biome-credentials"]
biome-key-management = ["splinter/biome-key-management"]
biome-profile = ["splinter/biome-profile"]
config-allow-keys = ["authorization-handler-allow-keys"]
database-postgres = ["diesel", "diesel/postgres", "scabbard/postgres", "splinter/postgres"]
database-sqlite = ["diesel", "diesel/sqlite", "scabbard/sqlite", "splinter/sqlite"]
health-service = ["health", "health/authorization"]
https-bind = ["splinter/https-bind"]
tap = [
  "splinter/tap",
  "scabbard/metrics",
]
node = [
    "authorization",
    "https-bind",
    "diesel",
    "sawtooth",
    "scabbard/client-reqwest",
    "splinter/admin-service-client",
    "splinter/admin-service-event-client",
    "splinter/admin-service-event-client-actix-web-client",
    "splinter/admin-service-event-subscriber-glob",
    "splinter/client-reqwest",
    "splinter/rest-api-actix-web-3",
    "splinter/registry-client",
    "splinter/registry-client-reqwest",
    "splinter/biome-client",
    "splinter/biome-client-reqwest",
]
oauth = [
    "splinter/oauth"
]
rest-api-cors = ["splinter/rest-api-cors"]
service-endpoint = []
trust-authorization = ["splinter/trust-authorization"]
ws-transport = ["splinter/ws-transport"]

[package.metadata.deb]
maintainer = "The Splinter Team"
depends = "$auto"
assets = [
    ["packaging/man/*.1", "/usr/share/man/man1", "644"],
    ["packaging/registry.yaml.example", "/etc/splinter/registry.yaml.example", "644"],
    ["packaging/splinterd.toml.example", "/etc/splinter/splinterd.toml.example", "644"],
    ["packaging/systemd/splinterd", "/etc/default/splinterd", "644"],
    ["packaging/systemd/splinterd.service", "/lib/systemd/system/splinterd.service", "644"],
    ["target/release/splinterd", "/usr/bin/splinterd", "755"]
]
conf-files = [
    "/etc/default/splinterd",
    "/lib/systemd/system/splinterd.service"
]
maintainer-scripts = "packaging/ubuntu"
extended-description = """\
Splinter is a blockchain-inspired networking platform for distributed \
communications between organizations."""
