# Copyright 2018-2022 Cargill Incorporated
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "splinter-rest-api-actix-web-1"
version = "0.7.1"
authors = ["Cargill Incorporated"]
edition = "2021"
license = "Apache-2.0"
description = """\
    Splinter REST API implementation written using Actix Web v1.
"""

[dependencies]
actix-web = { version = "1", optional = true }
futures = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }
scabbard = { path = "../../services/scabbard/libscabbard", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
splinter = { path = "../../libsplinter", features = ["rest-api-actix-web-1"], optional = true }
splinter-rest-api-common = { path = "../common", optional = true }
transact = { version = "0.5", features = ["state-merkle-sql", "family-sabre"], optional = true }

[dev-dependencies]
diesel = { version = "1", features = ["r2d2", "serde_json", "sqlite"] }
splinter = { path = "../../libsplinter", features = ["admin-service", "rest-api-actix-web-1", "sqlite"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }

[features]
default = []

stable = [
    # The stable feature extends default:
    "default",
    # The following features are stable:
    "admin-service",
    "authorization",
    "biome",
    "biome-key-management",
    "registry",
    "rest-api",
    "scabbard-service",
    "service",
]

experimental = [
    # The experimental feature extends stable:
    "stable",
    # The following features are experimental:
]

admin-service = [
    "actix-web",
    "futures",
    "log",
    "serde",
    "serde_json",
    "splinter",
    "splinter-rest-api-common",
    "splinter/admin-service"
]
authorization = ["splinter/authorization"]
biome = ["splinter/biome", "serde"]
biome-key-management = ["biome", "splinter/biome-key-management"]
registry = ["splinter/registry", "actix-web", "futures"]
rest-api = ["splinter/rest-api"]
scabbard-service = ["scabbard/splinter-service", "scabbard/rest-api", "transact"]
service = ["splinter/runtime-service", "serde_json", "log"]
